--- a/index.html
+++ b/index.html
@@ -7,11 +7,27 @@
     <title>Technical Documentation Page</title>
   </head>
   <body>
+    <nav id="navbar">
+      <header>Introduction</header>
+      <ul>
+        <li><a href="" class="nav-link"></a>Introduction to JAVA</li>
+        <li><a href="" class="nav-link"></a></li>
+        <li><a href="" class="nav-link"></a></li>
+        <li><a href="" class="nav-link"></a></li>
+        <li><a href="" class="nav-link"></a></li>
+      </ul>
+    </nav>
     <main id="main-doc">
-      <section class="main-section">
-        <header>Introduction</header>
+      <section class="main-section" id="introduction">
+        <header>Introduction to JAVA</header>
+        <p>10 ta</p>
+        <code>5 ta</code>
+        <li>5ta</li>
       </section>
       <section class="main-section"></section>
+      <header>Introduction</header>
+      <p></p>
+
       <section class="main-section"></section>
       <section class="main-section"></section>
       <section class="main-section"></section>
