--- a/index.html
+++ b/index.html
@@ -17,37 +17,41 @@
       <hr />
       <ul class="nav nav-tabs flex-column">
         <li class="nav-item">
-          <a href="#introduction" class="nav-link">What is React?</a>
+          <a href="#What_is_React?" class="nav-link">What is React?</a>
         </li>
         <li class="nav-item">
-          <a href="#how-react" class="nav-link">How does React Work?</a>
+          <a href="#How_does_React_Work?" class="nav-link"
+            >How does React Work?</a
+          >
         </li>
         <li class="nav-item">
-          <a href="#history" class="nav-link">React.JS History</a>
+          <a href="#React.JS_History" class="nav-link">React.JS History</a>
         </li>
         <li class="nav-item">
-          <a href="#environment" class="nav-link"
+          <a href="#Setting_up_a_React_Environment" class="nav-link"
             >Setting up a React Environment</a
           >
         </li>
         <li class="nav-item">
-          <a href="#run-react" class="nav-link">Run the React Application</a>
+          <a href="#Run_the_React_Application" class="nav-link"
+            >Run the React Application</a
+          >
         </li>
         <li class="nav-item">
-          <a href="#modify-react" class="nav-link"
+          <a href="#Modify_the_React_Application" class="nav-link"
             >Modify the React Application</a
           >
         </li>
         <li class="nav-item">
-          <a href="#what-next" class="nav-link">What's Next?</a>
+          <a href="#What's_Next?" class="nav-link">What's Next?</a>
         </li>
         <li class="nav-item">
-          <a href="#reference" class="nav-link">Reference</a>
+          <a href="#Reference" class="nav-link">Reference</a>
         </li>
       </ul>
     </nav>
     <main id="main-doc">
-      <section class="main-section" id="introduction">
+      <section class="main-section" id="What_is_React?">
         <header>What is React?</header>
         <p>
           React, sometimes referred to as a frontend JavaScript framework, is a
@@ -55,7 +59,7 @@
         </p>
         <p>React is a tool for building UI components.</p>
       </section>
-      <section class="main-section" id="how-react">
+      <section class="main-section" id="How_does_React_Work?">
         <header>How does React Work?</header>
         <p>React creates a VIRTUAL DOM in memory.</p>
         <p>
@@ -73,7 +77,7 @@
           of this tutorial.
         </p>
       </section>
-      <section class="main-section" id="history">
+      <section class="main-section" id="React.JS_History">
         <header>React.JS History</header>
         <ul>
           <li>Current version of React.JS is V18.0.0 (April 2022).</li>
@@ -92,7 +96,7 @@
           </li>
         </ul>
       </section>
-      <section class="main-section" id="environment">
+      <section class="main-section" id="Setting_up_a_React_Environment">
         <header>Setting up a React Environment</header>
         <p>
           If you have npx and Node.js installed, you can create a React
@@ -119,7 +123,7 @@
           application.
         </p>
       </section>
-      <section class="main-section" id="run-react">
+      <section class="main-section" id="Run_the_React_Application">
         <header>Run the React Application</header>
         <p>Now you are ready to run your first real React application!</p>
         <p>
@@ -147,7 +151,7 @@
           alt=""
         />
       </section>
-      <section class="main-section" id="modify-react">
+      <section class="main-section" id="Modify_the_React_Application">
         <header>Modify the React Application</header>
         <p>So far so good, but how do I change the content?</p>
         <p>
@@ -218,7 +222,7 @@
           alt=""
         />
       </section>
-      <section class="main-section" id="what-next">
+      <section class="main-section" id="What's_Next?">
         <header>What's Next?</header>
         <p>
           Now you have a React Environment on your computer, and you are ready
@@ -249,7 +253,7 @@
           root.render(myFirstElement);
         </pre>
       </section>
-      <section class="main-section" id="reference">
+      <section class="main-section" id="Reference">
         <header>Reference</header>
         <p>
           All the documentation in this page is taken from
