--- a/index.html
+++ b/index.html
@@ -107,15 +107,14 @@
           it is recommended that you uninstall the package to ensure npx always
           uses the latest version of <code>create-react-app</code>.
         </p>
+        <p>To uninstall, run this command:</p>
+        <p><code class="command">npm uninstall -g create-react-app</code></p>
         <p>
-          To uninstall, run this command:
-          <code>npm uninstall -g create-react-app</code>.
+          Run this command to create a React application named
+          <code>my-react-app</code>:
         </p>
         <p>
-          Run this command to create a React application named my-react-app:
-        </p>
-        <p>
-          <code>npx create-react-app my-react-app </code>
+          <code class="command">npx create-react-app my-react-app </code>
         </p>
 
         <p>
@@ -130,7 +129,7 @@
           Run this command to move to the <code>my-react-app</code> directory:
         </p>
         <p>
-          <code>cd my-react-app</code>
+          <code class="command">cd my-react-app</code>
         </p>
         <p>
           Run this command to run the React application
@@ -138,18 +137,20 @@
         </p>
 
         <p>
-          <code>npm start</code>
+          <code class="command">npm start</code>
         </p>
         <p>
           A new browser window will pop up with your newly created React App! If
           not, open your browser and type <code>localhost:3000</code> in the
           address bar.
         </p>
-        <p>The result:</p>
-        <img
-          src="https://www.w3schools.com/REACT/screenshot_myfirstreact.png"
-          alt=""
-        />
+        <div class="result-background">
+          <p>The result:</p>
+          <img
+            src="https://www.w3schools.com/REACT/screenshot_myfirstreact.png"
+            alt=""
+          />
+        </div>
       </section>
       <section class="main-section" id="Modify_the_React_Application">
         <header>Modify the React Application</header>
@@ -159,9 +160,9 @@
           <code>src</code> folder. Inside the src folder there is a file called
           <code>App.js</code>, open it and it will look like this:
         </p>
-
-        <p>/myReactApp/src/App.js:</p>
-        <pre>
+        <div class="result-background">
+          <p>/myReactApp/src/App.js:</p>
+          <pre>
             import logo from './logo.svg';
             import './App.css';
             
@@ -187,14 +188,14 @@
             }
             
             export default App;
-          </pre
-        >
+          </pre>
+        </div>
         <p>Try changing the HTML content and save the file.</p>
         <p>
           Notice that the changes are visible immediately after you save the
           file, you do not have to reload the browser!
         </p>
-        <p>Example</p>
+        <p class="example">Example</p>
         <p>
           Replace all the content inside the
           <code> &lt;div className="App"&gt;</code> with a
@@ -216,11 +217,13 @@
           Notice that we have removed the imports we do not need (logo.svg and
           App.css).
         </p>
-        <p>The result:</p>
-        <img
-          src="https://www.w3schools.com/REACT/screenshot_helloworld.png"
-          alt=""
-        />
+        <div class="result-background">
+          <p>The result:</p>
+          <img
+            src="https://www.w3schools.com/REACT/screenshot_helloworld.png"
+            alt=""
+          />
+        </div>
       </section>
       <section class="main-section" id="What's_Next?">
         <header>What's Next?</header>
@@ -240,10 +243,10 @@
           code inside the <code>index.js</code> file to make them look like the
           example in the "Show React" tool below:
         </p>
-        <p>Example</p>
-        <p>Click the "Run Example" button to see the result.</p>
-        <p><code>index.js</code> :</p>
-        <pre>
+        <p class="example">Example</p>
+        <div class="result-background">
+          <p><code>index.js</code> :</p>
+          <pre>
           import React from 'react';
           import ReactDOM from 'react-dom/client';
 
@@ -251,7 +254,9 @@
 
           const root = ReactDOM.createRoot(document.getElementById('root'));
           root.render(myFirstElement);
-        </pre>
+        </pre
+          >
+        </div>
       </section>
       <section class="main-section" id="Reference">
         <header>Reference</header>
